--- a/scr/style.css
+++ b/scr/style.css
@@ -110,6 +110,12 @@ body {
   background-color: rgba(55, 0, 255, 1);
   color: rgba(255, 255, 255, 1);
   font-weight: 700;
+  transition: 0.5s;
+}
+.container .hero .btn .btn1:hover{
+  cursor: pointer;
+  background-color: rgb(0, 220, 0);
+  transform: scale(1.1);
 }
 .container .hero .btn .btn2 {
   padding: 15px 25px;
