--- a/scr/style.css
+++ b/scr/style.css
@@ -112,7 +112,7 @@ body {
   font-weight: 700;
   transition: 0.5s;
 }
-.container .hero .btn .btn1:hover{
+.container .hero .btn .btn1:hover {
   cursor: pointer;
   background-color: rgb(0, 220, 0);
   transform: scale(1.1);
@@ -149,10 +149,10 @@ body {
 }
 .team .card-team {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 .team .card-team .card {
-  margin: 40px 0;
+  margin: 40px;
   width: 210px;
   height: 270px;
   background-color: #d9d9d94e;
@@ -190,6 +190,7 @@ body {
 .about-team .infor-team {
   margin: 40px 0;
   display: flex;
+
   width: 100%;
   height: 320px;
   background-color: #d9d9d962;
@@ -209,4 +210,51 @@ body {
 }
 .infor-team .infor h2 {
   padding: 20px;
+}
+
+/* feature and technology */
+.feature {
+  padding: 10px 0;
+  width: 90%;
+  text-align: center;
+  place-items: center;
+}
+.feature h1 {
+  margin: 20px 0;
+  padding: 10px;
+  font-size: 35px;
+  background: -webkit-linear-gradient(
+    10deg,
+    rgba(99, 55, 255, 1),
+    rgba(39, 170, 255, 1)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.feature .feature-techno {
+  width: 90%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.feature .feature-techno .card-skill {
+  align-content: center;
+  width: 300px;
+  height: 400px;
+  background-color: #d9d9d962;
+  margin: 30px;
+  border-radius: 20px;
+}
+.feature .feature-techno .card-skill img {
+  height: 230px;
+  width: 230px;
+}
+.feature .feature-techno .card-skill p {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #ffffff;
+  padding: 10px;
+  margin: 10px 0 ;
 }
