--- a/scr/style.css
+++ b/scr/style.css
@@ -114,7 +114,7 @@ body {
 }
 .container .hero .btn .btn1:hover {
   cursor: pointer;
-  background-color: rgb(0, 220, 0);
+  background-color: rgb(2, 62, 112);
   transform: scale(1.1);
 }
 .container .hero .btn .btn2 {
@@ -172,6 +172,7 @@ body {
 .about-team {
   width: 85%;
   margin: 30px 0;
+  
 }
 .about-team h1 {
   padding: 20px 0;
@@ -250,11 +251,12 @@ body {
 .feature .feature-techno .card-skill img {
   height: 230px;
   width: 230px;
+  border-radius: 10px;
 }
 .feature .feature-techno .card-skill p {
   font-size: 1.6rem;
   font-weight: 700;
   color: #ffffff;
   padding: 10px;
-  margin: 10px 0 ;
+  margin: 10px 0;
 }
