--- a/scr/style.css
+++ b/scr/style.css
@@ -44,7 +44,7 @@ body {
   font-weight: 600;
   color: white;
 }
-.navbar-menu a:hover {
+.navbar-menu li a:hover {
   background: -webkit-linear-gradient(
     20deg,
     rgba(99, 55, 255, 1),
@@ -114,7 +114,7 @@ body {
 }
 .container .hero .btn .btn1:hover {
   cursor: pointer;
-  background-color: rgb(2, 62, 112);
+  background-color: rgb(23, 185, 64);
   transform: scale(1.1);
 }
 .container .hero .btn .btn2 {
@@ -163,6 +163,10 @@ body {
   border-radius: 20px;
   box-shadow: 0px 0px 14px 1px #d9d9d95a;
   border: 2px solid blue;
+  transition: 1s;
+}
+.team .card-team .card:hover{
+  transform: scale(1.2);
 }
 .team .card-team .card img {
   margin: 20px;
@@ -194,11 +198,24 @@ body {
 .about-team .infor-team {
   margin: 40px 0;
   display: flex;
-
   width: 100%;
   height: 320px;
   background-color: #d9d9d962;
   border-radius: 20px;
+}
+@media only screen and (max-width: 600px) {
+  .about-team .infor-team {
+    display: block;
+  }
+  .header .logo{
+    font-size: 30px;
+  }
+  .navbar-menu a{
+    font-size: 10px;
+  }
+  .navbar-menu ul li{
+    display: none;
+  }
 }
 .about-team .infor-team img {
   width: 300px;
@@ -256,6 +273,10 @@ body {
   height: 230px;
   width: 230px;
   border-radius: 10px;
+}
+.feature .feature-techno .card-skill:hover{
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 .feature .feature-techno .card-skill p {
   font-size: 1.6rem;
